<resources>
    <string name="app_name">FamilySync</string>
    <string name="sign_in_welcome">Welcome to FamilySync</string>
    <string name="email_hint">Enter Email</string>
    <string name="password_hint">Enter Password</string>
    <string name="sign_in_button">Sign In</string>
    <string name="create_account_button">Create Account</string>
    <string name="name_hint">Enter Name</string>
    <string name="back_button">Back</string>

    <string name="activity_add_event_title">Add an Event</string>
    <string name="activity_add_event_hint_name">Enter Name</string>
    <string name="activity_add_event_hint_location">Enter Location</string>
    <string name="activity_add_event_hint_notes">Enter Notes</string>
    <string name="activity_add_event_time">Select Time</string>
    <string name="activity_add_event_data_title">Load/Save Event Data</string>
    <string name="activity_add_event_data_explain">Save event data for making adding events in the future easier</string>
    <string name="activity_add_event_data_delete">Delete Selected</string>
    <string name="activity_add_event_data_or">OR</string>
    <string name="activity_add_event_data_save">Save Data</string>

    <string name="fragment_calendar_previous_calendar">Prev</string>
    <string name="fragment_calendar_next_calendar">Next</string>
    <string name="fragment_calendar_sunday">SUN</string>
    <string name="fragment_calendar_monday">MON</string>
    <string name="fragment_calendar_tuesday">TUE</string>
    <string name="fragment_calendar_wednesday">WED</string>
    <string name="fragment_calendar_thursday">THU</string>
    <string name="fragment_calendar_friday">FRI</string>
    <string name="fragment_calendar_saturday">SAT</string>

    <string name="fragment_event_maximize_content_desc">Maximize the day\'s events</string>
    <string name="fragment_event_minimize_content_desc">Minimize the day\'s events</string>

    <string name="adapter_nav_icon_content_desc">Navigation icon</string>

    <string name="dialog_manage_add_remove_title">Add/Remove Member</string>
    <string name="dialog_manage_enter_email">Enter User\s Email Address</string>
    <string name="dialog_manage_add_button">Add</string>
    <string name="dialog_manage_remove_button">Remove</string>
    <string name="dialog_manage_cancel_button">Cancel</string>

    <string name="dialog_delete_event_title">Delete this event?</string>
    <string name="dialog_delete_event_cancel">Cancel</string>
    <string name="dialog_delete_event_confirm">Confirm</string>

    <string-array name="colors_array">
        <item>Purple</item>
        <item>Orange</item>
        <item>Green</item>
        <item>Brown</item>
    </string-array>

    <string name="click_me">Click me!</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="current_date">Current Date</string>
    <string name="back_to_month">Back to month</string>

    <string name="action_bar_add_event">Add Event</string>

    <string name="add_event">Add an Event</string>
    <string name="action_add_event">action_add_event</string>
    <string name="action_go_to_lists_notes">Go to Lists/Notes</string>
    <string name="action_go_to_reminders">Go to Reminders</string>
    <string name="action_group">Manage Group</string>
    <string name="action_log_out">Log out</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="family_member_nav_title">Family</string>
    <string name="nav_logout_icon_content_desc">Logout Icon</string>
    <string name="nav_logout">Logout</string>
</resources>
