<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:background="@android:color/white">

<!-- date toolbar -->
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="horizontal"
    android:background="@color/colorWhite">

    <!-- date title -->
    <Button
        android:layout_width="88dp"
        android:layout_height="50dp"
        android:text="@string/fragment_calendar_previous_calendar"
        android:id="@+id/prevButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/calendar_date_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#222222"
        android:text="@string/current_date"
        app:layout_constraintLeft_toRightOf="@+id/prevButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/nextButton"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:layout_width="88dp"
        android:layout_height="50dp"
        android:text="@string/fragment_calendar_next_calendar"
        android:id="@+id/nextButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>

<!-- days header -->
<android.support.constraint.ConstraintLayout
    android:id="@+id/calendar_header"
    android:layout_width="match_parent"
    android:layout_height="35dp"
    android:layout_marginBottom="0dp"
    android:background="@color/calendarHeader">

    <TextView
        style="@style/TextViewStyleHeader"
        android:id="@+id/sunday_header"
        android:text="@string/fragment_calendar_sunday"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/monday_header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        style="@style/TextViewStyleHeader"
        android:id="@+id/monday_header"
        android:text="@string/fragment_calendar_monday"
        app:layout_constraintLeft_toRightOf="@+id/sunday_header"
        app:layout_constraintRight_toLeftOf="@+id/tuesday_header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        style="@style/TextViewStyleHeader"
        android:id="@+id/tuesday_header"
        android:text="@string/fragment_calendar_tuesday"
        app:layout_constraintLeft_toRightOf="@+id/monday_header"
        app:layout_constraintRight_toLeftOf="@+id/wednesday_header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        style="@style/TextViewStyleHeader"
        android:id="@+id/wednesday_header"
        android:text="@string/fragment_calendar_wednesday"
        app:layout_constraintLeft_toRightOf="@+id/tuesday_header"
        app:layout_constraintRight_toLeftOf="@+id/thursday_header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        style="@style/TextViewStyleHeader"
        android:id="@+id/thursday_header"
        android:text="@string/fragment_calendar_thursday"
        app:layout_constraintLeft_toRightOf="@+id/wednesday_header"
        app:layout_constraintRight_toLeftOf="@+id/friday_header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        style="@style/TextViewStyleHeader"
        android:id="@+id/friday_header"
        android:text="@string/fragment_calendar_friday"
        app:layout_constraintLeft_toRightOf="@+id/thursday_header"
        app:layout_constraintRight_toLeftOf="@+id/saturday_header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        style="@style/TextViewStyleHeader"
        android:id="@+id/saturday_header"
        android:text="@string/fragment_calendar_saturday"
        app:layout_constraintLeft_toRightOf="@+id/friday_header"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>

<!-- days view -->
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainBackground">

        <GridView
            android:id="@+id/calendar_grid"
            android:layout_width="395dp"
            android:layout_height="280dp"
            android:horizontalSpacing="2dp"
            android:verticalSpacing="2dp"
            android:numColumns="7"
            android:gravity="center"
            android:columnWidth="55dp"
            android:stretchMode="none"
            android:layout_marginLeft="1dp"
            android:layout_marginStart="1dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@color/colorGrey"/>

    </android.support.constraint.ConstraintLayout>


</LinearLayout>
