<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/family_background"
    tools:context="com.davego44.familysync.activities.CreateAccountActivity">

    <EditText
        style="@style/EditTextStyleAuth"
        android:id="@+id/nameEditText"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        android:layout_marginTop="10dp"
        android:drawableLeft="@mipmap/person"
        android:drawableStart="@mipmap/person"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        style="@style/EditTextStyleAuth"
        android:inputType="textEmailAddress"
        android:id="@+id/emailEditText"
        android:hint="@string/email_hint"
        android:drawableLeft="@mipmap/email"
        android:drawableStart="@mipmap/email"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        style="@style/EditTextStyleAuth"
        android:inputType="textPassword"
        android:id="@+id/passwordEditText"
        android:hint="@string/password_hint"
        android:drawableLeft="@mipmap/lock"
        android:drawableStart="@mipmap/lock"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        style="@style/ButtonStyleAuth"
        android:text="@string/create_account_button"
        android:id="@+id/createAccountButton"
        android:onClick="onCreateAccountPressed"
        android:background="@color/complementary"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        style="@style/ButtonStyleAuth"
        android:text="@string/back_button"
        android:id="@+id/backButton"
        android:onClick="onBackPressed"
        android:background="@color/primary"
        app:layout_constraintTop_toBottomOf="@id/createAccountButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

</android.support.constraint.ConstraintLayout>
