<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/family_background"
    tools:context="com.davego44.familysync.activities.SignInActivity">

    <EditText
        style="@style/EditTextStyleAuth"
        android:id="@+id/signInEmailEditText"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
        android:layout_marginTop="10dp"
        android:drawableLeft="@mipmap/email"
        android:drawableStart="@mipmap/email"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        style="@style/EditTextStyleAuth"
        android:inputType="textPassword"
        android:id="@+id/signInPasswordEditText"
        android:hint="@string/password_hint"
        android:layout_marginTop="5dp"
        android:drawableLeft="@mipmap/lock"
        android:drawableStart="@mipmap/lock"
        app:layout_constraintTop_toBottomOf="@id/signInEmailEditText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        style="@style/ButtonStyleAuth"
        android:text="@string/sign_in_button"
        android:id="@+id/signInButton"
        android:onClick="onSignInPressed"
        android:background="@color/primary"
        app:layout_constraintTop_toBottomOf="@id/signInPasswordEditText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        style="@style/ButtonStyleAuth"
        android:text="@string/create_account_button"
        android:id="@+id/signInCreateAccountButton"
        android:onClick="onCreateAccountPressed"
        android:background="@color/complementary"
        app:layout_constraintTop_toBottomOf="@id/signInButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
